# pytorch2.0_ttnn

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  Op_Report_ToDo.md  PR_comments.md  Procfile  README.md  README_SD14.md  WHISPER_IMPLEMENTATION_REPORT.md  batch-tests-to-run.txt  build.sh  compiler_demo_app.py  demo.py  fx_graphviz.py  mock_ttnn.py  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements-koyeb-test.txt  requirements-pkg.txt  requirements.txt  requirements_models.txt  setup.py  test.py  test_curry.py  test_multi_out.py  test_sd35_koyeb.py  testing.txt  torch_stat.py  torch_ttnn.py  ttnn.py  unsqueeze.py  validate_whisper_complete.py  whisper_perf_report.md
.github/: pull_request_template.md
demo/: bert.py  codegen.py  demo.md  demo.py  gpt2.py  mnist.py  resnet18.py  utils.py  whisper.py
demo_models/: __init__.py  bert.py  codegen.py  demo.md  gpt2.py  mnist.py  resnet18.py  utils.py
dockerfile/: Dockerfile
docs/: BuildFlow.md  Contributing.md  Convolutions.md  DevelopWithMetalFromSources.md  KnownIssues.md  OpenRegistrationAPI.md  OperationsReport.md  ProblemSolving.md  README.md.in  cumulative_input_variations.md  stable_diffusion_14_repro.md  wheel_library_bundling.md
passes/: add_data_move_pass.py  eliminate_data_move_pass.py  graphviz_pass.py  permute_reshape_tuple.py  stat_pass.py  to_tt_pass.py
patterns/: add.py  mm.py
scripts/: debug-ttnn-build.sh  debug-ttnn-runtime.sh  diagnose-abi.sh  find-missing-torch-libs.sh  gen_ttnn_ops.py  prepare-ttnn-runtime.sh  run-cpp-native-tests.sh  test_script.py  ttnn-runtime-fix.sh
tests/: __init__.py  conftest.py  datasets_utils.py  measure_test_space_usage.py  pytest.ini  test_add.py  test_aten_t.py  test_bert.py  test_conv_fix.py  test_cse.py  test_datamove.py  test_expand.py  test_fall_back.py  test_if.py  test_matrix_multiplication.py  test_more_ops.py  test_norm.py  test_only_add_matmul.py  test_ops.py  test_pointwise_binary.py  test_pointwise_trinary.py  test_pointwise_unary.py  test_real_world.py  test_stable_diffusion_14.py  test_stat.py  test_transpose.py  test_type_conversion.py  test_unsqueeze.py  utils.py
tools/: annotate_scheme.py  aten_ops_analysis.py  aten_test.tmpl  build_cpp_extension.sh  build_tt_metal.sh  collect_metrics.py  export_code.py  extract_bert_large_ops.py  generate_guard_function_from_input_var_metric.py  generate_input_variation_test_from_models.py  generate_op_accuracy_tests.py  generate_report.py  huggingface_delete_cache.py  merge_to_tt_guard_autogen.py  mnist_memcheck.py  op_scheme_aten_declarations.txt  op_scheme_doc.txt  op_scheme_pyi.txt  op_scheme_torch_mlir.txt  plot_chart.py  run_torchvision.py  run_transformers.py  send_to_data_team.py  sow2_list.txt  stat_models.py  stat_torchvision.py  to_tt_guard.tmpl  to_tt_guard_autogen.tmpl  (+4 more)
torch_ttnn/cpp_extension/: CMakeLists.txt  TtnnCustomAllocator.h  TtnnCustomAllocator.hpp  TtnnGuard.cpp  TtnnGuard.hpp  TtnnOpaqueTensorImpl.h  TtnnTensorImpl.cpp  TtnnTensorImpl.hpp  __init__.py  build_cpp_extension.sh  build_tt_metal_tracy.sh  custom_device_mode.py  extension_utils.hpp  open_registration_extension.cpp  pyproject.toml  python_demo.py  run_cpp_extension_tests.sh  setup.py  ttnn_device_mode.py
torch_ttnn/cpp_extension/cmake/: NoMKLWorkaround.cmake  find_prebuilt_ttnn.cmake  find_python_workaround_ubuntu24.cmake  python_workaround_ubuntu24.cmake  x86_64-linux-torch-toolchain.cmake
torch_ttnn/cpp_extension/core/: TtnnCustomAllocator.cpp  TtnnCustomAllocator.hpp  TtnnGuard.cpp  TtnnGuard.hpp  TtnnTensorImpl.cpp  TtnnTensorImpl.hpp  copy.cpp  copy.hpp
torch_ttnn/cpp_extension/demo/: CMakeLists.txt  main.cpp  main_ttnn_only.cpp
torch_ttnn/cpp_extension/include/core/: TtnnCustomAllocator.hpp  TtnnGuard.hpp  copy.hpp
torch_ttnn/cpp_extension/include/ops/: creation.hpp  unary.hpp
torch_ttnn/cpp_extension/include/utils/: device.cpp  device.hpp  vector_utils.hpp
torch_ttnn/cpp_extension/ops/: binary.hpp
torch_ttnn/cpp_extension/src/: open_registration_extension.cpp
torch_ttnn/cpp_extension/src/core/: TtnnCustomAllocator.cpp  TtnnGuard.cpp  TtnnTensorImpl.cpp  copy.cpp
torch_ttnn/cpp_extension/src/ops/: binary.cpp  unary.cpp  unary.hpp
torch_ttnn/cpp_extension/src/utils/: vector_utils.cpp
torch_ttnn/cpp_extension/torch_ttnn_cpp_extension/: __init__.py
torch_ttnn/cpp_extension/ttnn_cpp_extension/examples/add/: main.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/include/ttnn_cpp_extension/core/: TtnnCustomAllocator.hpp  TtnnGuard.hpp  TtnnTensorImpl.hpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/include/ttnn_cpp_extension/ops/: as_strided.hpp  binary.hpp  clone.hpp  embedding.hpp  expand.hpp  linear.hpp  linear_iml.hpp  matmul.hpp  norm.hpp  permute.hpp  slice.hpp  softmax.hpp  squeeze.hpp  to_copy.hpp  ttnn_to_dtype.hpp  unary.hpp  unsqueeze.hpp  view.hpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/include/ttnn_cpp_extension/utils/: binary_eager_register.hpp  binary_eager_wrappers.hpp  conv_pool_eager_register.hpp  conv_pool_eager_wrappers.hpp  device.hpp  eager_common.hpp  eager_wrap.hpp  extension_utils.hpp  layout_utils.hpp  random_eager_register.hpp  random_eager_wrappers.hpp  reduction_eager_register.hpp  reduction_eager_wrappers.hpp  unary_eager_register.hpp  unary_eager_wrappers.hpp  vector_utils.hpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/: open_registration_extension.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/core/: TtnnCustomAllocator.cpp  TtnnGuard.cpp  TtnnTensorImpl.cpp  copy.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/ops/: as_strided.cpp  binary.cpp  clone.cpp  clone.hpp  creation.cpp  embedding.cpp  expand.cpp  linear.cpp  linear_iml.cpp  matmul.cpp  norm.cpp  permute.cpp  slice.cpp  softmax.cpp  squeeze.cpp  to_copy.cpp  ttnn_to_dtype.cpp  unary.cpp  unsqueeze.cpp  view.cpp
torch_ttnn/cpp_extension/ttnn_cpp_extension/src/utils/: device.cpp  vector_utils.cpp
torch_ttnn/cpp_extension/utils/: device.hpp  get_torch_abi_flags.py  vector_utils.cpp  vector_utils.hpp
(+5659 files in other folders)
