[build-system]
requires = [
    "scikit-build-core>=0.10,<0.11",
    "torch>=2.2",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "torch-ttnn"
dynamic = ["version"]
description = "PyTorch 2.0 TTNN Compiler (install with [pypi] extra for runtime dependencies)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Tenstorrent", email = "info@tenstorrent.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
keywords = ["pytorch", "ttnn", "tenstorrent", "compiler", "machine-learning", "deep-learning"]
dependencies = [
    # Core runtime dependencies (required for all installations)
    "torch==2.7.1+cpu ; platform_machine == 'x86_64'",
    "torch==2.7.1 ; platform_machine == 'aarch64'",
    "torchvision==0.22.1+cpu ; platform_machine == 'x86_64'",
    "torchvision==0.22.1 ; platform_machine == 'aarch64'",
    "graphviz",  # Used by torch_ttnn/fx_graphviz.py for GraphvizPass
    # NOTE: ttnn is NOT listed here because it comes from different sources:
    #   - Development builds: Built from source via torch_ttnn/cpp_extension/third-party/tt-metal/create_venv.sh
    #   - PyPI installations: Use the 'pypi' extra below
    # This prevents pip from replacing locally built ttnn during development
]

[project.optional-dependencies]
# PyPI users should install with: pip install torch-ttnn[pypi]
# This adds ttnn as a dependency from PyPI
# NOTE: This line is automatically updated by .github/workflows/update-ttnn-wheel.yaml
pypi = [
    "ttnn @ https://pypi.eng.aws.tenstorrent.com/ttnn/ttnn-0.62.0.dev20250916-cp310-cp310-manylinux_2_34_x86_64.whl#sha256=d68ddb1fd83f558f43b908c10094ebe016664646da9d795844de07a15aedbf09 ; python_version==\"3.10\"",
]

dev = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout==2.2.0",
    "pytest-split==0.8.2",
    # Code quality tools
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.3",
    # Data analysis and visualization (used by tools/ only)
    "tabulate==0.9.0",
    "networkx==3.1",
    "matplotlib>=3.7.1",
    "paramiko==3.5.1",
    # Model testing dependencies
    "transformers==4.38.0",
    "huggingface_hub[cli]>=0.25.2",
    "pandas==2.0.3",
    "Pillow==10.3.0",
    "pydantic>=2.9.2",
    "requests>=2.31",
    "sentencepiece==0.2.0",
    "protobuf==5.27.3",
    "mlp-mixer-pytorch==0.1.1",
    "datasets>=2.9.0",
    "diffusers==0.32.2",
    "pytorchcv",
    "librosa>=0.10.0",
    "soundfile",
    "numpy>=1.24.4,<2",
]

[project.urls]
Repository = "https://github.com/tenstorrent/pytorch2.0_ttnn"

[tool.scikit-build]
cmake.version = ">=3.23"
cmake.build-type = "Release"
cmake.verbose = true
wheel.packages = ["torch_ttnn"]
wheel.exclude = [
    "torch_ttnn/cpp_extension/third-party/**",  # Exclude entire submodule (source code, not needed in wheel)
    "torch_ttnn/cpp_extension/build/**",        # Exclude build artifacts
    "torch_ttnn/cpp_extension/*.sh",            # Exclude build scripts
]
logging.level = "INFO"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
# ABI flags are auto-detected from PyTorch's configuration in CMakeLists.txt
# (see torch.__config__.show() parsing). Do not hardcode them here to avoid mismatches.
# Force Clang-17 as the compiler (must match tt-metal build)
CMAKE_C_COMPILER = "clang-17"
CMAKE_CXX_COMPILER = "clang++-17"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+)$"

[[tool.scikit-build.generate]]
path = "torch_ttnn/_version.py"
template = """# file generated by scikit-build-core
__all__ = ["__version__", "version"]
__version__ = version = "${version}"
"""

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.ruff]
line-length = 120
